--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon"  href="./public/image.png" />
+    <link rel="icon"  href="/image.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>KOJOKWARTENG-PHOTOGRAPHY</title>
+    <title>PHOTOGRAPHY</title>
   </head>
   <body>
     <div id="root"></div>
